- Fixing skills title on mobile. - Adding centered vertical line on mobile.

--- a/css/aboutPageStylesheet.css
+++ b/css/aboutPageStylesheet.css
@@ -27,7 +27,7 @@
 #about {
     position: relative;
     background-color: transparent;
-    padding: 0;
+    padding: 0 0 50px 0;
     min-height: 640px;
 }
 #about:before {
