--- a/css/contactPageStylesheet.css
+++ b/css/contactPageStylesheet.css
@@ -49,10 +49,6 @@
 
 @media (min-width: 992px)
 {
-    #contact div.vertical-line {
-
-    }
-
     #contact-letter {
         background: url("../resources/images/letter.svg");
         background-repeat: no-repeat;
